# Helios-x

./: CODE_UPDATES.md  COORDINATION_GUIDE.md  PHASE3_INTEGRATION.md  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements-ui.txt  rogue_x
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: argus-daily.yml  ci.yml  codeql.yml  ui.yml
argus/: README.md  __init__.py  architecture_validator.py  cto.py  governance_enforcer.py
argus_gov/: cli.py  generator.py  indexer.py  parser.py  validator.py
docs/: CONTEXT.md  GOVERNANCE.md  MISSION.md  WORKFLOW.md
helios_api/: server.py
helios_core/: __init__.py  agent_manager.py  message_bus.py  orchestrator.py
memory/: __init__.py  episodic.py  persistence.py
openclaw/: __init__.py  parser.py
rogue-x/: .gitignore  README.md  requirements.txt
rogue-x/config/: __init__.py  tradingconfig.py
rogue-x/core/: __init__.py  data_validator.py  market_data_handler.py  order_executor.py  performance_monitor.py  position_manager.py  risk_manager.py  trade_logger.py
rogue-x/scripts/: __init__.py  safety_check.py
rogue-x/tests/: __init__.py  test_data_validator.py  test_risk_manager.py
strategy/: __init__.py  indicators.py  signals.py
ui/: app.py
ui_tests/: conftest.py  test_api.py  test_app.py
